--- a/css/pages/my-foodx-community.css
+++ b/css/pages/my-foodx-community.css
@@ -116,14 +116,14 @@
 .bubble-left-7 { top: 63%; right: 74%; background-color: white; color: #004000 }
 .bubble-left-8 { top: 72%; right: 72%; background-color: white; color: #004000 }
 /* right */
-.bubble-right-0 { top: 30%; left: 68%; background-color: #004000; color: white }
-.bubble-right-1 { top: 39%; left: 69.5%; background-color: white; color: #004000 }
-.bubble-right-2 { top: 48%; left: 70.5%; background-color: white; color: #004000 }
-.bubble-right-3 { top: 57%; left: 71%; background-color: white; color: #004000 }
-.bubble-right-4 { top: 66%; left: 70.5%; background-color: white; color: #004000 }
-.bubble-right-5 { top: 75%; left: 69%; background-color: white; color: #004000 }
-.bubble-right-6 { top: 84%; left: 66%; background-color: white; color: #004000 }
-.bubble-right-7 { top: 93%; left: 63%; background-color: white; color: #004000 }
+.bubble-right-0 { top: 20%; left: 68%; background-color: #004000; color: white }
+.bubble-right-1 { top: 29%; left: 69.5%; background-color: white; color: #004000 }
+.bubble-right-2 { top: 38%; left: 70.5%; background-color: white; color: #004000 }
+.bubble-right-3 { top: 47%; left: 71%; background-color: white; color: #004000 }
+.bubble-right-4 { top: 56%; left: 70.5%; background-color: white; color: #004000 }
+.bubble-right-5 { top: 65%; left: 69%; background-color: white; color: #004000 }
+.bubble-right-6 { top: 74%; left: 66%; background-color: white; color: #004000 }
+.bubble-right-7 { top: 83%; left: 63%; background-color: white; color: #004000 }
 /* Button: Try my neighbourhood */
 .try-map {
     margin-top: 0px;
@@ -167,8 +167,7 @@
     font-weight: 800;
     font-family: "Inter", sans-serif;
     color: #004000;
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .groups-graphic-box {
     display: flex;
